--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>AYAN BAG</strong></h1>
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Sophomore | Pythonist | Passionate | Tech Blogger | ECE Undergrad
 <br>
-<br>Eat . Sleep . &lt;/&gt; . Repeat</p>
+<br>Eat . Sleep . &lt;/&gt; . Repeat 
+                  <br> This is my old site. New Site is live at <a href="http://iamayan.me">http://iamayan.me</a></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black display-4" href="http://bit.ly/ayanbag_cv_web" target="_blank"><span class="socicon socicon-sharethis mbr-iconfont mbr-iconfont-btn" style="font-size: 15px;"></span>RESUME</a> <a class="btn btn-md btn-black display-4" href="https://www.linkedin.com/in/ayanbag/" target="_blank"><span class="socicon socicon-linkedin mbr-iconfont mbr-iconfont-btn" style="font-size: 15px;"></span>LINKEDIN</a> <a class="btn btn-md btn-black display-4" href="https://github.com/ayanbag" target="_blank"><span class="socicon socicon-github mbr-iconfont mbr-iconfont-btn" style="font-size: 15px;"></span>GITHUB</a> <a class="btn btn-md btn-black display-4" href="https://medium.com/@ayanbag" target="_blank"><span class="socicon socicon-medium mbr-iconfont mbr-iconfont-btn" style="font-size: 15px;"></span>BLOG</a></div>
             </div>
         </div>
